--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.0", features = ["derive"] }
+color-eyre = "0.6.2"
+dialoguer = "0.10.4"
+fuzzy-matcher = "0.3.7"
+itertools = "0.11.0"
+ron = "0.8.1"
+serde = "1.0.188"
+serde_derive = "1.0.188"
+tabled = "0.14.0"
