Added functionality to remove a login from the database
A new CLI subcommand `remove` which uses a `dialoguer::FuzzySelect` to
get the user to choose a login to remove. Currently the implementation
of `Display` for a `Login` isn't great, so it's a bit ugly.

- Also removed some unnessecary imports and did some cleanup
- Reworked the stupid methods on `Database` which would take ownership
  and return the databasee
  - Now they all either take `&mut self` or `&self`
- Reworked `run()`, so that it only opens the database if we aren't
  initialisiing one, then uses modifies that based on the subcommand

Signed-off-by: Erick Howard <needlesslygrim@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.0", features = ["derive"] }
 color-eyre = "0.6.2"
-dialoguer = "0.10.4"
+dialoguer = {version = "0.10.4", features = ["fuzzy-select"] }
+fastrand = "2.0.0"
 fuzzy-matcher = "0.3.7"
 itertools = "0.11.0"
 ron = "0.8.1"
