--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,17 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.0", features = ["derive"] }
 color-eyre = "0.6.2"
-dialoguer = {version = "0.10.4", features = ["fuzzy-select"] }
+dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
 fastrand = "2.0.0"
 fuzzy-matcher = "0.3.7"
 itertools = "0.11.0"
 ron = "0.8.1"
 serde = "1.0.188"
 serde_derive = "1.0.188"
+serde_json = "1.0.105"
 tabled = "0.14.0"
+tiny_http = { version  = "0.12.0", optional = true }
+
+[features]
+web = ["tiny_http"]
+default = ["web"]
