--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
 fastrand = "2.0.0"
 fuzzy-matcher = "0.3.7"
 itertools = "0.11.0"
+rayon = {version = "1.7.0", optional = true }
 ron = "0.8.1"
 serde = "1.0.188"
 serde_derive = "1.0.188"
@@ -21,4 +22,5 @@ tiny_http = { version  = "0.12.0", optional = true }
 
 [features]
 web = ["tiny_http"]
+paralell_queries = ["rayon"]
 default = ["web"]
