New fuzzy matching library
Added a new feature flag, which will enable fuzzy matching with the
`nucleo_matcher` crate, which promises much faster speeds that
`fuzzy-matcher`.

Signed-off-by: Erick Howard <needlesslygrim@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,8 +10,9 @@ clap = { version = "4.4.0", features = ["derive"] }
 color-eyre = "0.6.2"
 dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
 fastrand = "2.0.0"
-fuzzy-matcher = "0.3.7"
+fuzzy-matcher = { version = "0.3.7", optional = true }
 itertools = "0.11.0"
+nucleo-matcher = { version = "0.2.0", optional = true }
 rayon = {version = "1.7.0", optional = true }
 ron = "0.8.1"
 serde = "1.0.188"
@@ -23,4 +24,6 @@ tiny_http = { version  = "0.12.0", optional = true }
 [features]
 web = ["tiny_http"]
 paralell_queries = ["rayon"]
-default = ["web"]
+nucleo_queries = ["nucleo-matcher"]
+fuzzy_matcher_queries = ["fuzzy-matcher"]
+default = ["web", "paralell_queries", "nucleo_queries"]
