Implement an ID system for the database
Each login now has an associated UUID which is how they are removed from
the database. Because we now have uniique indices, we can use a hashmap,
which will increase our removal performance etc. HHowever, overall it
might be slower, so I might have to look at the performance difference
between using a `Vec<Login>` with the UUID inside the `Login`, and using
a `Hashmap<Uuid, Login>`.

I also removed the support for `fuzzy_matcher`, because it seemed to be
about the same as `nucleo_matcher` speedwise (with very unscientific
benchmarks), but having them both wasn't much use.

Lastly, the the removal API is now implemented properly, since we have a
proper ID system :^).

Signed-off-by: Erick Howard <needlesslygrim@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,13 @@ edition = "2021"
 [dependencies]
 # General
 fastrand = "2.0.0"
-fuzzy-matcher = { version = "0.3.7", optional = true }
 itertools = "0.11.0"
 nucleo-matcher = { version = "0.2.0", optional = true }
 rayon = { version = "1.7.0", optional = true }
 ron = "0.8.1"
 serde = "1.0.188"
 serde_derive = "1.0.188"
+uuid = { version = "1.4.1" , features = ["v4", "serde"]}
 
 # CLI
 clap = { version = "4.4.0", features = ["derive"] }
@@ -31,7 +31,6 @@ serde_json = { version = "1.0.105" , optional = true }
 web = ["tiny_http", "url", "serde_json"]
 paralell_queries = ["rayon"]
 nucleo_queries = ["nucleo-matcher"]
-fuzzy_matcher_queries = ["fuzzy-matcher"]
 default = ["web", "paralell_queries", "nucleo_queries"]
 
 [profile.release]
