--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,13 @@ edition = "2021"
 # General
 fastrand = "2.0.0"
 itertools = "0.11.0"
-nucleo-matcher = { version = "0.2.0", optional = true }
+nucleo-matcher = "0.2.0"
 rayon = { version = "1.7.0", optional = true }
 ron = "0.8.1"
 serde = "1.0.188"
 serde_derive = "1.0.188"
 uuid = { version = "1.4.1" , features = ["v4", "serde"]}
+
 
 # CLI
 clap = { version = "4.4.0", features = ["derive"] }
@@ -30,8 +31,7 @@ serde_json = { version = "1.0.105" , optional = true }
 [features]
 web = ["tiny_http", "url", "serde_json"]
 paralell_queries = ["rayon"]
-nucleo_queries = ["nucleo-matcher"]
-default = ["web", "paralell_queries", "nucleo_queries"]
+default = ["web", "paralell_queries"]
 
 [profile.release]
 opt-level = "z"
