--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,14 @@ fastrand = "2.0.0"
 itertools = "0.11.0"
 nucleo-matcher = "0.2.0"
 rayon = { version = "1.7.0", optional = true }
-ron = "0.8.1"
 serde = "1.0.188"
 serde_derive = "1.0.188"
+serde_with = "3.3.0"
 uuid = { version = "1.4.1" , features = ["v4", "serde"]}
-
+thiserror = "1.0.49"
+rmp-serde = "1.1.2"
+toml = "0.8.2"
+directories = "5.0.1"
 
 # CLI
 clap = { version = "4.4.0", features = ["derive"] }
@@ -27,6 +30,9 @@ tabled = "0.14.0"
 tiny_http = { version  = "0.12.0", optional = true }
 url = { version = "2.4.1", optional = true }
 serde_json = { version = "1.0.105" , optional = true }
+signal-hook = { version = "0.3.17" }
+
+
 
 [features]
 web = ["tiny_http", "url", "serde_json"]
