Removed parallell_queries feature and other cleanup
- Removed the support for parallelism via `rayon`, since it probably
  wasn't providing much of a help now we're using `nucleo_matcher`
- Moved around the impls of `Model`, `Login`, and `Config`, so that they
  are in order of their definition
- Renamed a few methods so that they have clearer names, e.g.
  `Database::append()` became `Database::append_logins()`
- Made all interactive functions `pub(crate)` instead of `pub`, as should
  any consumers of these APIs ever exist, they don't need the interactive
  code
- Collapsed all `std` imports
- Removed unnessecary `return`s

Signed-off-by: Erick Howard <needlesslygrim@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,8 +36,8 @@ signal-hook = { version = "0.3.17" }
 
 [features]
 web = ["tiny_http", "url", "serde_json"]
-paralell_queries = ["rayon"]
-default = ["web", "paralell_queries"]
+parallel_queries = ["rayon"]
+default = ["web", "parallel_queries"]
 
 [profile.release]
 opt-level = "z"
