--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ directories = "5.0.1"
 # CLI
 clap = { version = "4.4.0", features = ["derive"] }
 color-eyre = "0.6.2"
-dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
+dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 tabled = "0.14.0"
 
 # Web
@@ -32,12 +32,12 @@ url = { version = "2.4.1", optional = true }
 serde_json = { version = "1.0.105" , optional = true }
 signal-hook = { version = "0.3.17" }
 
-
-
 [features]
 web = ["tiny_http", "url", "serde_json"]
 parallel_queries = ["rayon"]
 default = ["web", "parallel_queries"]
 
 [profile.release]
-opt-level = "z"
+opt-level = 3
+lto = "fat"
+codegen-units = 1
