--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
 name = "gondolin"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 # General
@@ -14,7 +12,7 @@ rayon = { version = "1.7.0", optional = true }
 serde = "1.0.188"
 serde_derive = "1.0.188"
 serde_with = "3.3.0"
-uuid = { version = "1.4.1" , features = ["v4", "serde"]}
+uuid = { version = "1.4.1" , features = ["v4", "serde"] }
 thiserror = "1.0.49"
 rmp-serde = "1.1.2"
 toml = "0.8.2"
@@ -31,6 +29,8 @@ tiny_http = { version  = "0.12.0", optional = true }
 url = { version = "2.4.1", optional = true }
 serde_json = { version = "1.0.105" , optional = true }
 signal-hook = { version = "0.3.17" }
+log = "0.4.20"
+pretty_env_logger = "0.5.0"
 
 [features]
 web = ["tiny_http", "url", "serde_json"]
