--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gondolin"
+name = "locket"
 version = "1.0.0"
 edition = "2021"
 
@@ -23,17 +23,18 @@ clap = { version = "4.4.0", features = ["derive"] }
 color-eyre = "0.6.2"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 tabled = "0.14.0"
+clap-verbosity-flag = "2.2.0"
 
 # Web
 tiny_http = { version  = "0.12.0", optional = true }
 url = { version = "2.4.1", optional = true }
 serde_json = { version = "1.0.105" , optional = true }
-signal-hook = { version = "0.3.17" }
-log = "0.4.20"
-pretty_env_logger = "0.5.0"
+signal-hook = { version = "0.3.17", optional = true }
+log = { version = "0.4.20", optional = true }
+pretty_env_logger = { version = "0.5.0",  optional  = true }
 
 [features]
-web = ["tiny_http", "url", "serde_json"]
+web = ["tiny_http", "url", "serde_json", "signal-hook",  "log", "pretty_env_logger"]
 parallel_queries = ["rayon"]
 default = ["web", "parallel_queries"]
 
